# DA-662A_kernel_v1.2

./: Makefile  README  config.arch
user/snort/contrib/: Makefile.am  Makefile.in  create_mssql
user/snort/doc/: BUGS  CREDITS  INSTALL  Makefile.am  Makefile.in  README  README.PLUGINS  README.csv  README.database  TODO  USAGE  snortman.tex
user/snort/doc/signatures/signatures/: 1002.txt  1007.txt  1021.txt  1025.txt  1029.txt  103.txt  1039.txt  104.txt  1040.txt  1042.txt  105.txt  1054.txt  1055.txt  106.txt  1066.txt  107.txt  1070.txt  1073.txt  1079.txt  108.txt  1080.txt  1087.txt  1094.txt  1104.txt  1122.txt  1139.txt  1158.txt  1159.txt  1163.txt  1166.txt  1167.txt  117.txt  1171.txt  1175.txt  (+271 more)
user/snort/src/: Makefile.am  Makefile.in  acsmx.c  acsmx.h  bitop.h  bounds.h  byte_extract.c  cdefs.h  checksum.h  codes.c  codes.h  debug.c  debug.h  decode.c  decode.h  detect.c  detect.h  event.h  fatal.h  fpcreate.c  fpcreate.h  fpdetect.c  fpdetect.h  generators.h  log.c  log.h  mempool.c  mempool.h  mpse.c  mpse.h  mstring.c  mstring.h  mwm.c  mwm.h  parser.c  parser.h  pcrm.c  pcrm.h  plugbase.c  plugbase.h  (+29 more)
user/snort/src/detection-plugins/: Makefile.am  Makefile.in  sp_byte_check.c  sp_byte_check.h  sp_byte_jump.c  sp_byte_jump.h  sp_clientserver.c  sp_clientserver.h  sp_dsize_check.c  sp_dsize_check.h  sp_icmp_code_check.c  sp_icmp_code_check.h  sp_icmp_id_check.c  sp_icmp_id_check.h  sp_icmp_seq_check.c  sp_icmp_seq_check.h  sp_icmp_type_check.c  sp_icmp_type_check.h  sp_ip_fragbits.c  sp_ip_fragbits.h  sp_ip_id_check.c  sp_ip_id_check.h  sp_ip_proto.c  sp_ip_proto.h  sp_ip_same_check.c  sp_ip_same_check.h  sp_ip_tos_check.c  sp_ip_tos_check.h  sp_ipoption_check.c  sp_ipoption_check.h  sp_pattern_match.c  sp_pattern_match.h  sp_react.c  sp_react.h  sp_respond.c  sp_respond.h  sp_rpc_check.c  sp_rpc_check.h  sp_session.c  sp_session.h  (+10 more)
user/snort/src/output-plugins/: Makefile.am  Makefile.in  spo_alert_fast.c  spo_alert_fast.h  spo_alert_full.c  spo_alert_full.h  spo_alert_sf_socket.c  spo_alert_sf_socket.h  spo_alert_syslog.c  spo_alert_syslog.h  spo_alert_unixsock.c  spo_alert_unixsock.h  spo_csv.c  spo_csv.h  spo_database.c  spo_database.h  spo_log_ascii.c  spo_log_ascii.h  spo_log_null.c  spo_log_null.h  spo_log_tcpdump.c  spo_log_tcpdump.h  spo_unified.c  spo_unified.h
user/snort/src/parser/: IpAddrSet.c  IpAddrSet.h  Makefile.in
user/snort/src/preprocessors/: Makefile.am  Makefile.in  http-resp.c  http-resp.h  perf-base.c  perf-base.h  perf-event.c  perf-event.h  perf-flow.c  perf-flow.h  perf.c  perf.h  sfprocpidstats.c  sfprocpidstats.h  spp_arpspoof.c  spp_arpspoof.h  spp_bo.c  spp_bo.h  spp_conversation.c  spp_conversation.h  spp_frag2.c  spp_frag2.h  spp_http_decode.c  spp_http_decode.h  spp_httpflow.c  spp_httpflow.h  spp_perfmonitor.c  spp_perfmonitor.h  spp_portscan.c  spp_portscan.h  spp_portscan2.c  spp_portscan2.h  spp_rpc_decode.c  spp_rpc_decode.h  spp_stream4.c  spp_stream4.h  spp_telnet_negotiation.c  spp_telnet_negotiation.h
user/snort/src/win32/: Makefile.am  Makefile.in
(+1574 files in other folders)
