## $Id: Makefile.am,v 1.3 2002/09/02 17:46:02 chrisgreen Exp $
AUTOMAKE_OPTIONS=foreign no-dependencies

EXTRA_DIST = ACID-0.9.6b21.tar.gz \
address_config.sh \
create_mssql \
create_mysql \
create_oracle.sql \
create_postgresql \
faq2html \
Guardian.tar.gz \
Makefile.am \
mysql.php3 \
Net-SnortLog-0.1.tar.gz \
passiveOS.tar.gz \
pgsql.php3 \
README \
regen-sidmap \
S99snort \
sid-add \
snort2html.pl \
snortdb-extra.gz \
snortlog \
snortnet.tar.gz \
snortpp.c \
snort-sort.pl \
snort_stat.pl \
snortwatch-0.7.tar.gz \
Spade-092200.1.tar.gz
