## $Id
AUTOMAKE_OPTIONS=foreign no-dependencies

noinst_LIBRARIES = libspp.a

libspp_a_SOURCES = spp_arpspoof.c spp_arpspoof.h spp_bo.c spp_bo.h \
spp_frag2.c spp_frag2.h spp_http_decode.c spp_http_decode.h \
spp_portscan.c spp_portscan.h spp_rpc_decode.c spp_rpc_decode.h  \
spp_stream4.c spp_stream4.h spp_telnet_negotiation.c \
spp_telnet_negotiation.h \
spp_httpflow.c spp_httpflow.h \
spp_perfmonitor.c spp_perfmonitor.h \
spp_conversation.c spp_conversation.h spp_portscan2.c spp_portscan2.h \
perf.c perf.h \
perf-base.c perf-base.h \
perf-flow.c perf-flow.h \
perf-event.c perf-event.h \
http-resp.c http-resp.h \
sfprocpidstats.c sfprocpidstats.h

INCLUDES = @INCLUDES@
